[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speakeasy-emulator"
dynamic = ["version"]
description = "Speakeasy malware emulation framework"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Andrew Davis"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["emulator", "malware", "windows", "reverse-engineering", "security"]
dependencies = [
    "pefile",
    "capstone",
    "lznt1",
    "unicorn>=1.0.2,<2",
    "jsonschema",
    "pycryptodome",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/mandiant/speakeasy"
Repository = "https://github.com/mandiant/speakeasy"
Issues = "https://github.com/mandiant/speakeasy/issues"

[project.scripts]
speakeasy = "speakeasy.cli:main"

[tool.setuptools.dynamic]
version = {attr = "speakeasy.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
speakeasy = [
    "configs/*.json",
    "config_schema.json",
    "resources/**/*",
    "winenv/decoys/**/*",
]

[tool.pytest.ini_options]
# so that tests can `import utils` and import relative to ./tests/
pythonpath = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
