[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speakeasy-emulator"
dynamic = ["version"]
description = "Speakeasy malware emulation framework"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Andrew Davis"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["emulator", "malware", "windows", "reverse-engineering", "security"]
dependencies = [
    "hexdump",
    "pefile",
    "capstone",
    "lznt1",
    "unicorn>=2.1.4",
    "pycryptodome",
    "pydantic>=2.0",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
gdb = ["udbserver>=0.2.1"]

[project.urls]
Homepage = "https://github.com/mandiant/speakeasy"
Repository = "https://github.com/mandiant/speakeasy"
Issues = "https://github.com/mandiant/speakeasy/issues"

[project.scripts]
speakeasy = "speakeasy.cli:main"

[tool.setuptools.dynamic]
version = {attr = "speakeasy.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
speakeasy = [
    "configs/*.json",
    "resources/**/*",
    "winenv/decoys/**/*",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["deps/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true

# Windows struct definitions using ctypes - extremely dynamic, not worth typing
[[tool.mypy.overrides]]
module = "speakeasy.winenv.defs.*"
disable_error_code = ["attr-defined", "assignment", "var-annotated"]

# Object manager - heavily dynamic attribute access on ctypes structs
[[tool.mypy.overrides]]
module = "speakeasy.windows.objman"
disable_error_code = ["attr-defined", "union-attr", "var-annotated"]

# WDF driver framework - very dynamic dispatch and attribute access
[[tool.mypy.overrides]]
module = "speakeasy.winenv.api.kernelmode.wdfldr"
disable_error_code = ["attr-defined", "union-attr"]

# API handler modules - dynamic dispatch, Windows struct access
[[tool.mypy.overrides]]
module = [
    "speakeasy.winenv.api.kernelmode.ntoskrnl",
    "speakeasy.winenv.api.kernelmode.netio",
    "speakeasy.winenv.api.usermode.kernel32",
    "speakeasy.winenv.api.usermode.user32",
    "speakeasy.winenv.api.usermode.ws2_32",
    "speakeasy.winenv.api.usermode.rpcrt4",
    "speakeasy.winenv.api.usermode.msvcrt",
    "speakeasy.winenv.api.usermode.netapi32",
    "speakeasy.winenv.api.usermode.wtsapi32",
    "speakeasy.winenv.api.usermode.shlwapi",
    "speakeasy.winenv.api.usermode.iphlpapi",
    "speakeasy.winenv.api.usermode.dnsapi",
    "speakeasy.windows.kernel_mods.volmgr",
]
disable_error_code = ["attr-defined", "assignment", "union-attr"]

[tool.ty.environment]
extra-paths = ["typings"]
